updated conky to new format. updated tmux to powerline path

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,68 +1,75 @@
+# Installation instructions:
+# 
+# sudo dnf install powerline powerline-tmux
+# sudo dnf install tmux-powerline
+source /usr/share/tmux/powerline.conf
+
 set -g default-terminal "screen-256color"   
-source /usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
-### Status line {{{                                                                
-                                                                                   
-# Status line ON                                                                   
-set-option -g status on                                                            
-# Status line updating interval(sec):default 15sec                                 
-set -g status-interval 5                                                           
-# UTF-8                                                                            
-set-option -g status-utf8 on                                                       
-# Status line position (top/bottom) - tmux 1.7 or later                            
-set -g status-position bottom                                                      
-# Status line horizontal position (left/centre/right):default left                 
-set-option -g status-justify left                                                  
-                                                                                   
-                                                                                   
-## Defulat Colors                                                                  
-#                                                                                  
-# Color:                                                                           
-#  black, red, green, yellow, blue, magenta, cyan, white                           
-#  brightblack, brightred, ..., brightxxxxx                                        
-#                                                                                  
-# Reference example to set colors                                                  
-#  - https://github.com/seebi/tmux-colors-solarized                                
-#                                                                                  
-                                                                                   
-# default statusbar colors                                                         
-set-option -g status-bg colour235 #base02                                          
-set-option -g status-fg colour136 #yellow                                          
-set-option -g status-attr default                                                  
-                                                                                   
-# default window title colors                                                      
-set-window-option -g window-status-fg colour244 #base0                             
-set-window-option -g window-status-bg default                                      
-#set-window-option -g window-status-attr dim                                       
-                                                                                   
-# active window title colors                                                       
-set-window-option -g window-status-current-fg colour166 #orange                    
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright                         
-                                                                                
-# pane border                                                                   
-set-option -g pane-border-fg colour235 #base02                                  
-set-option -g pane-active-border-fg colour240 #base01                           
-                                                                                
-# active pane border                                                            
-#set -g pane-active-border-fg brightgreen                                       
-#set -g pane-active-border-bg black                                             
-                                                                                
-# message text                                                                  
-set-option -g message-bg colour235 #base02                                      
-set-option -g message-fg colour166 #orange                                      
-                                                                                
-# pane number display                                                           
-set-option -g display-panes-active-colour colour33 #blue                        
-set-option -g display-panes-colour colour166 #orange                            
-                                                                                
-# copy mode colors                                                              
-set-window-option -g mode-fg black                                              
-set-window-option -g mode-bg white                                              
-                                                                                
-# clock                                                                         
-set-window-option -g clock-mode-colour colour64 #green                          
-                                                                                
-# }}}                                                                           
+run-shell "powerline-daemon -d"
+
+    ### Status line {{{                                                                
+                                                                                    
+    # Status line ON                                                                   
+    set-option -g status on                                                            
+    # Status line updating interval(sec):default 15sec                                 
+    set -g status-interval 5                                                           
+    # UTF-8                                                                            
+    #set-option -g status-utf8 on                                                       
+    # Status line position (top/bottom) - tmux 1.7 or later                            
+    set -g status-position bottom                                                      
+    # Status line horizontal position (left/centre/right):default left                 
+    set-option -g status-justify left                                                  
+                                                                                    
+                                                                                    
+    ## Default Colors                                                                  
+    #                                                                                  
+    # Color:                                                                           
+    #  black, red, green, yellow, blue, magenta, cyan, white                           
+    #  brightblack, brightred, ..., brightxxxxx                                        
+    #                                                                                  
+    # Reference example to set colors                                                  
+    #  - https://github.com/seebi/tmux-colors-solarized                                
+    #                                                                                  
+                                                                                    
+    # default statusbar colors                                                         
+    set-option -g status-bg colour235 #base02                                          
+    set-option -g status-fg colour136 #yellow                                          
+    set-option -g status-attr default                                                  
+                                                                                    
+    # default window title colors                                                      
+    set-window-option -g window-status-fg colour244 #base0                             
+    set-window-option -g window-status-bg default                                      
+    #set-window-option -g window-status-attr dim                                       
+                                                                                    
+    # active window title colors                                                       
+    set-window-option -g window-status-current-fg colour166 #orange                    
+    set-window-option -g window-status-current-bg default
+    #set-window-option -g window-status-current-attr bright                         
+                                                                                    
+    # pane border                                                                   
+    set-option -g pane-border-fg colour235 #base02                                  
+    set-option -g pane-active-border-fg colour240 #base01                           
+                                                                                    
+    # active pane border                                                            
+    #set -g pane-active-border-fg brightgreen                                       
+    #set -g pane-active-border-bg black                                             
+                                                                                    
+    # message text                                                                  
+    set-option -g message-bg colour235 #base02                                      
+    set-option -g message-fg colour166 #orange                                      
+                                                                                    
+    # pane number display                                                           
+    set-option -g display-panes-active-colour colour33 #blue                        
+    set-option -g display-panes-colour colour166 #orange                            
+                                                                                    
+    # copy mode colors                                                              
+    set-window-option -g mode-fg black                                              
+    set-window-option -g mode-bg white                                              
+                                                                                    
+    # clock                                                                         
+    set-window-option -g clock-mode-colour colour64 #green                          
+                                                                                    
+    # }}}                                                                           
                                                                                 
                                                                                 
 ## Right/Left status line {{{                                                   
@@ -92,7 +99,8 @@ set-window-option -g clock-mode-colour colour64 #green
 #                                                                               
 # Status line - Left                                                            
 #                                                                               
-set -g status-left " #[fg=white,bold]#I-#P#[default] > #[fg=white,bold]#20(whoami)@#H#[default] >"
+set -g status-left " #[fg=white,bold]#S #[fg=white,bold]#I-#P#[default] \
+> #[fg=white,bold]#(whoami)@#h#[default] >"
                                                                                 
 # Left max length                                                               
 set -g status-left-length 40                                                    
